--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Profile</title>
 </head>
-<body>
+<body bgcolor = "#212121">
     <h3>
          This is list of JS-project.
     </h3>
     <br>
 
     <table>
-        <ul>
-            <tr><a href="project1.html">Bubble Game.</a></tr>
-            <tr><a href="project2.html">Bubble Game.</a></tr>
-        </ul>
+         <tr>
+            <th><a href="project1.html">Bubble Game.</a>a></th>
+            <th><a href="project2.html">Color Flipper.</a></th>
+          </tr>
     </table>
 
 </body>
