--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 
     <table>
          <tr>
-            <th><a href="project1.html">Bubble Game.</a>a></th>
+            <th><a href="project1.html">Bubble Game.</a></th>
+        </tr>
+        <tr>
+        
             <th><a href="project2.html">Color Flipper.</a></th>
-          </tr>
+        </tr>
+        
     </table>
 
 </body>
