--- a/project4.html
+++ b/project4.html
@@ -64,7 +64,6 @@
                     min++;
                     timer = 0;
                 printTime();
-
                     console.log("sec : ",sec);
                     console.log("min : ",min);
                 }
@@ -72,29 +71,21 @@
                     hr++;
                     min=0;
                 printTime();
-
                     console.log("sec : ",sec);
                     console.log("min : ",min);
                     console.log("hr : ",hr);
                 }
             }
-
-
         },1000)
     });
-
-    stop.addEventListener("click",()=>{
+    reset.addEventListener("click",()=>{
         clearInterval(timeinterval);
         console.log("ayush");
         hr  = 0;
         min = 0;
         sec = 0;
       body.innerHTML = `<p>${hr} : ${min} : ${sec}</p>`;
-
-    });
-
-
-    
+    });    
 </script>
 </body>
 </html>
