--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
         <div class="card">
             <a href="project07.html">Reviews</a>
         </div>
+
+        <div class="card">
+            <a href="project08.html">Reviews</a>
+        </div>
     </div>
 
 </body>
