added new project on grid css

--- a/index.html
+++ b/index.html
@@ -115,7 +115,11 @@
         </div>
 
         <div class="card">
-            <a href="project08.html">Reviews</a>
+            <a href="project08.html">Lorem Text Generator</a>
+        </div>
+
+        <div class="card">
+            <a href="grid.html">Gallery</a>
         </div>
     </div>
 
