--- a/snake/index.html
+++ b/snake/index.html
@@ -6,16 +6,20 @@
     <title>Snake-Game</title>
 </head>
 <style>
+    canvas{
+        border: 4px solid black;
+        margin-left: 40px;
+        margin-top: 15px;
+    }
     body{
-        background: fixed;
-        background-repeat: no-repeat;
         width: 100vh;
-        height: 100vw 100vh;
-        background: url(https://t4.ftcdn.net/jpg/03/08/87/39/360_F_308873970_klaX5UmSzaODVHO6bv5vnTECKYDtWMB6.jpg);
+        height: 90vh;
+        background-size: cover;
+        background: url(https://t4.ftcdn.net/jpg/03/08/87/39/360_F_308873970_klaX5UmSzaODVHO6bv5vnTECKYDtWMB6.jpg) fixed no-repeat; 
     }
 </style>
 <body>
-   <canvas class="canvas" height="1000px" width="2500px"></canvas> 
+   <canvas class="canvas" height="250px" width="500px"></canvas> 
 
 </body>
 <script src="./app.js"></script>
