add working snake game in my profolio

--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@
         <div class="card">
             <a href="grid.html">Gallery</a>
         </div>
+
+         <div class="card">
+            <a href="./News App/index.html">News App</a>
+        </div>
+
+         <div class="card">
+            <a href="./snake/index.html">Snake Game</a>
+        </div>
     </div>
 
 </body>
