completed with  a bug

--- a/todo list/index.html
+++ b/todo list/index.html
@@ -12,13 +12,15 @@
             <h2>To-do List <img src="./images/icon.png" alt=""></h2>
             <div class="row">
                 <input type="text" name="" id="input-box"    placeholder="Add your text">
-                <button>Add</button>
+                <button onclick="addTask()">Add</button>
             </div>
-            <ul id="List-container">
-                <!-- <li class="cheaked" >Tast 1</li>
-                <li>Tast 2</li>
-                <li>Tast 3</li> -->
-            </ul>
+            <div class="">
+                <ul id="List-container">
+                    <li class="cheaked" >Tast 1</li>
+                    <li>Tast 2</li>
+                    <li>Tast 3</li>
+                </ul>
+            </div>
         </div>
         
     </div>
